# canon-image-renamer

./: .gitignore  Cargo.toml  README.md
src/: datetime.rs  main.rs
