[package]
name = "canon-image-renamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.21"
clap = { version = "3.2.17", features = [ "derive" ] }
kamadak-exif = "0.5.4"
thiserror = "1.0.32"
